force-app/main/default/objects/LostActionItem__c/LostActionItem__c.object-meta.xml
<CustomObject>
    <label>Lost Action Item</label>
    <nameField>
        <label>Lost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LostActionItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>