force-app/main/default/objects/LostActionItem__c/fields/ACTION_ITEM_COMPLETION_DATE__c.field-meta.xml
<CustomField>
    <fullName>ACTION_ITEM_COMPLETION_DATE__c</fullName>
    <label>ACTION ITEM COMPLETION DATE</label>
    <type>Date</type>
</CustomField>