force-app/main/default/objects/LostActionItem__c/fields/ActionItem_InChargeDept__c.field-meta.xml
<CustomField>
    <fullName>ActionItem_InChargeDept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action  Item In Charge Dept</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>LostActionItems</relationshipLabel>
    <relationshipName>LostActionItems</relationshipName>
    <type>Lookup</type>
</CustomField>