force-app/main/default/objects/LostActionItem__c/fields/ActionItem_RelavantDept__c.field-meta.xml
<CustomField>
    <fullName>ActionItem_RelavantDept__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action  Item Relavant Dept</label>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>LostActionItems (Action  Item Relavant Dept)</relationshipLabel>
    <relationshipName>LostActionItems1</relationshipName>
    <type>Lookup</type>
</CustomField>