force-app/main/default/objects/LostActionItem__c/fields/Countermeasure__c.field-meta.xml
<CustomField>
    <fullName>Countermeasure__c</fullName>
    <label>Countermeasure</label>
    <referenceTo>Lost_Countermeasure__c</referenceTo>
    <relationshipLabel>LostActionItems</relationshipLabel>
    <relationshipName>LostActionItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>