force-app/main/default/objects/LostActionItem__c/fields/InChargeDeptCode__c.field-meta.xml
<CustomField>
    <fullName>InChargeDeptCode__c</fullName>
    <formula>ActionItem_InChargeDept__r.CostCenter__c</formula>
    <label>InChargeDeptCode</label>
    <type>Text</type>
</CustomField>