force-app/main/default/objects/LostActionItem__c/fields/Lost_Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Lost_Action_Name__c</fullName>
    <label>Lost Action Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>