force-app/main/default/objects/LostActionItem__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>LostActionItems</relationshipLabel>
    <relationshipName>LostActionItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>