force-app/main/default/objects/LostActionItem__c/fields/ReleventDepartCode__c.field-meta.xml
<CustomField>
    <fullName>ReleventDepartCode__c</fullName>
    <formula>ActionItem_RelavantDept__r.CostCenter__c</formula>
    <label>ReleventDepartCode</label>
    <type>Text</type>
</CustomField>