force-app/main/default/objects/LostActionItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lost_Action_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>